Prevent droplists from appearing behind questions in side-by-side layouts

--- a/Survey/source/styles/formal/_t-question-base.scss
+++ b/Survey/source/styles/formal/_t-question-base.scss
@@ -60,6 +60,9 @@ html[dir="rtl"] .o-question-errorandinstruction {
 .sidebyside .o-question-information-and-messages {
     position: relative;
     z-index: 20;
+}
+
+.sidebyside.focused .o-question-information-and-messages {
     background-color: white;
 }
 
